# PEQuencer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled.ipynb  buttons.py  display.py  leds.py  links.md  macropad.py  main.py  readme.md  tracks.py
freertos/: FreeRTOSConfig.h.gch
include/: buttons.hpp  channel.hpp  data_storage.hpp  data_store.hpp  defs.h  display.hpp  global.hpp  logger.hpp  main.hpp  rgb.h
include/config/: FreeRTOSConfig.h
include/tasks/: task_display.hpp  task_hardware.hpp  task_sequencer.hpp
include/ui/: defs.h
poc/sequencer/: sequencer.py
prototype/: PrototypeFrontplate.blend  PrototypeFrontplate.blend1  PrototypeFrontplate.stl  center_panel.gcode  left_panel.gcode  right_panel.gcode
prototype/GCode/: LeftPanel.gcode  RightPanel.gcode
prototype/STL/: MidPanel.stl
sequencer/: button.py  channel.py  data_store.py  display.py  encoder.py  hardware.py  menu.py  sequencer.py  system.py
src/: CMakeLists.txt  EventGroupsDemo.h  Playtune.cpp  Playtune.h  backup.c  buttons.cpp  channel.cpp  data_storage.cpp  data_store.cpp  defs.h  display.cpp  logger.cpp  main.cpp  oled.h  rgb.h  scanner.c  ssd1306.h  usb_descriptors.c
src/tasks/: task_display.cpp  task_hardware.cpp  task_sequencer.cpp
src/ui/: defs.h  ui.h
test/: led_test.ino  pattern.ipynb
test/.ipynb_checkpoints/: pattern-checkpoint.ipynb
utilis/: flash.sh  init.sh
